Fix CSS covering Nav Bar functionality

--- a/client/src/styles/giphy.scss
+++ b/client/src/styles/giphy.scss
@@ -1,7 +1,6 @@
 .giphyContainer {
   height: 0;
   padding-bottom: 56.25%;
-  position: relative;
   width: 100%;
 }
 
@@ -10,7 +9,6 @@ iframe {
   height: 100%;
   src: 'https://giphy.com/embed/cCGQHaYLrnSJrHuaQq/video';
   left: 0;
-  position: absolute;
   top: 0;
   width: 100%;
 }
